clap_derive/tests/ui/skip_without_default.stderr
error[E0277]: the trait bound `Kind: Default` is not satisfied
  --> $DIR/skip_without_default.rs:22:12
   |
22 |     #[clap(skip)]
   |            ^^^^ the trait `Default` is not implemented for `Kind`
   |
   = note: required by `std::default::Default::default`
